--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,1 +1,38 @@
 // Начните писать стили здесь
+
+// -------------------------------- //
+
+// каждому БЭМ-блоку должен соответствовать отдельный препроцессорный файл
+
+// параметры
+@import "variables.scss";
+// параметры
+
+// для общих стилей
+@import "blocks/img.scss";
+@import "blocks/data.scss";
+@import "blocks/content.scss";
+// для общих стилей
+
+// шрифты, подключение файлов
+@import "fonts.scss";
+// шрифты, подключение файлов
+
+// общие блоки, подключение файлов
+@import "blocks/visually-hidden.scss";
+//
+// общие блоки, подключение файлов
+
+// index
+@import "blocks/menu.scss";
+@import "blocks/welcome.scss";
+@import "blocks/reasons.scss";
+@import "blocks/interesting.scss";
+@import "blocks/map.scss";
+@import "blocks/bottom.scss";
+@import "blocks/social.scss";
+@import "blocks/developer.scss";
+//
+// index
+
+// каждому БЭМ-блоку должен соответствовать отдельный препроцессорный файл
