--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -7,7 +7,11 @@ $lite-grey-color: #fcfcfc;
 $lighter-blue-color: #9ac2db;
 $lighter-grey-color: #d6d6d6;
 
+
 $darker-blue-color: #678fa8;
+
+$very-light-grey-color: #e5e5e5;
+$very-lighter-grey-color: #f2f2f2;
 
 $black-color:#000000;
 $white-color:#ffffff;
