3. Препроцессоры и автоматизация 3.9. Стилизация страницы каталога

--- a/source/sass/blocks/menu-hide.scss
+++ b/source/sass/blocks/menu-hide.scss
@@ -21,14 +21,15 @@
   z-index: -1;
 }
 
-.menu-hide__burger {
-  padding-bottom: 17px;
-
+.menu-hide__button-burger {
   position: absolute;
   top: 17px;
   right: 20px;
-}
 
+  background: none;
+
+  border: none;
+}
 
 .menu__hidden {
   display: none;
