--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -11,6 +11,9 @@
   background-repeat: no-repeat;
   background-position: center;
 
+  margin-right: auto;
+  margin-left: auto;
+
   max-width: 1201px;
   min-width: 320px;
   height: 57px;
