--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -3,10 +3,10 @@
 // цвет
 $lite-blue-color: #81b3d2;
 $lite-grey-color: #fcfcfc;
+$lite-grey-one-color: #f2f2f2;
 
 $lighter-blue-color: #9ac2db;
 $lighter-grey-color: #d6d6d6;
-
 
 $darker-blue-color: #678fa8;
 
