--- a/source/sass/blocks/master.scss
+++ b/source/sass/blocks/master.scss
@@ -2,3 +2,9 @@
 .master {
   scroll-behavior: smooth;
 }
+
+@media (min-width: $desktop-width) {
+  .master {
+    background-color: $lite-grey-two-color;
+  }
+}
