--- a/source/sass/blocks/bottom.scss
+++ b/source/sass/blocks/bottom.scss
@@ -4,10 +4,12 @@
   padding-right: 20px;
   padding-left: 20px;
 
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  min-height: 233px;
+
+  display: grid;
   align-items: center;
+  justify-items: center;
+  grid-template-rows: 1fr 1fr 1fr;
 
   outline: 3px solid $special-border-red-color; // специальные цыета для рамок по заданию
   outline-offset: -3px; // специальные цыета для рамок по заданию
@@ -19,4 +21,23 @@
   line-height: 26px;
   text-decoration: none;
   color: $black-color;
+}
+
+@media (min-width: $tablet-width) {
+  .bottom {
+    min-height: 120px;
+
+    display: grid;
+    grid-template-rows: auto;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .bottom {
+    padding-right: 120.1px;
+    padding-left: 104px;
+
+    background-color: $white-color;
+  }
 }
