--- a/source/sass/blocks/content.scss
+++ b/source/sass/blocks/content.scss
@@ -1,3 +1,15 @@
 .content {
   margin: 0 auto;
 }
+
+@media (min-width: $tablet-width) {
+  .content {
+    margin-top: -55px;
+    margin-right: auto;
+    margin-bottom: 0;
+    margin-left: auto;
+
+    display: grid;
+    grid-template-rows: 1fr max-content;
+  }
+}
