--- a/source/sass/blocks/data.scss
+++ b/source/sass/blocks/data.scss
@@ -13,3 +13,14 @@
   color: $black-color;
   text-transform: uppercase;
 }
+
+@media (min-width: $desktop-width) {
+  .data {
+    max-width: 1200px;
+    width: 1200px;
+    margin-right: auto;
+    margin-left: auto;
+
+    box-shadow: -1px 0 60px 3px $black-rgba-color;
+  }
+}
