--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -4,6 +4,7 @@
 $lite-blue-color: #81b3d2;
 $lite-grey-color: #fcfcfc;
 $lite-grey-one-color: #f2f2f2;
+$lite-grey-two-color: #e7e5e5;
 
 $lighter-blue-color: #9ac2db;
 $lighter-grey-color: #d6d6d6;
@@ -16,6 +17,8 @@ $very-lighter-grey-color: #f2f2f2;
 $black-color:#000000;
 $white-color:#ffffff;
 $grey-color:#eeeeee;
+
+$black-rgba-color:rgba(0, 0, 0, 0.3);
 // цвет
 
 // специальные цыета для рамок по заданию
@@ -24,13 +27,9 @@ $special-border-lite-green-color: #5aff00;
 $special-border-blue-color: #0600ff;
 // специальные цыета для рамок по заданию
 
-// шрифт
-$main-font: "Open Sans", "Arial", sans-serif;
-// шрифт
-
 // ширина экрана
-$tablet-width: 660px; // main
-$desktop-width: 940px; // main
+$tablet-width: 768px; // main
+$desktop-width: 1200px; // main
 // ширина экрана
 
 // параметры
