--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -207,6 +207,7 @@
 .reviews__button {
   display: flex;
   justify-content: center;
+
   padding-left: 20px;
   padding-right: 20px;
 }
@@ -228,4 +229,168 @@
   background-color: $lite-blue-color;
 
   border: none;
+}
+
+.reviews__line,
+.reviews__button-required {
+  display: none;
+}
+
+@media (min-width: $tablet-width) {
+  .reviews__triangle {
+    background-image: url("../img/triangle-top-tablet-desktop.svg");
+
+    max-width: 100%;
+    min-width: 769px;
+  }
+
+  .reviews__block {
+    min-height: 240px;
+
+    padding-top: 64px;
+    padding-right: 60px;
+    padding-left: 60px;
+
+    border-bottom: none;
+  }
+
+  .reviews__style {
+    border-bottom: none;
+  }
+
+  .reviews__header {
+    font-family: "PT Sans", "Arial", sans-serif;
+    font-size: 21px;
+    font-weight: 700;
+    line-height: 26px;
+    text-align: center;
+
+    padding-right: calc(168px - 60px);
+    padding-left: calc(166px - 60px);
+  }
+
+  .reviews__info {
+    font-family: "PT Sans", "Arial", sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: center;
+
+    padding-right: calc(158px - 60px);
+    padding-left: calc(156px - 60px);
+  }
+
+  .reviews__menu {
+    padding-right: 60px;
+    padding-left: 60px;
+  }
+
+  .reviews__form-wrapper {
+    display: flex;
+    flex-direction: row-reverse;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  .reviews__group {
+    &:first-child {
+      order: 1;
+
+      min-width: calc(377px - 60px);
+    }
+
+    &:nth-child(2) {
+      order: 3;
+
+      width: 100%;
+    }
+
+    &:nth-child(3) {
+      order: 1;
+    }
+
+    &:nth-child(4) {
+      order: 1;
+
+      min-width: calc(383px - 60px);
+    }
+
+    &:nth-child(5) {
+      order: 3;
+
+      width: 100%;
+    }
+  }
+
+  .reviews__line {
+    display: block;
+    border-right: 1px solid $lighter-grey-one-color;
+  }
+
+  .reviews__legend {
+    font-size: 21px;
+  }
+
+  .reviews__button {
+    display: flex;
+    justify-content: space-between;
+
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .reviews__pin {
+    width: auto;
+    min-width: 324px;
+  }
+
+  .reviews__button-required {
+    display: block;
+
+    font-family: "PT Sans", "Arial", sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 26px;
+    color: $black-special-color;
+  }
+
+  .reviews__style-group {
+    border-top: 1px solid $lighter-grey-one-color;
+  }
+
+  .reviews__legend-group {
+    padding-right: 48px;
+    padding-left: 48px;
+  }
+
+  .reviews__legend-special {
+    width: 308px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .reviews__block,
+  .reviews__menu {
+    background-color: $white-color;
+  }
+
+  .reviews__items-contact {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .reviews__li-contact {
+    display: flex;
+    flex-wrap: nowrap;
+    width: 480px;
+  }
+
+  .reviews__items-place {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .reviews__label-contact {
+    min-width: 161px;
+  }
 }
