--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -8,6 +8,7 @@ $lite-grey-two-color: #e7e5e5;
 
 $lighter-blue-color: #9ac2db;
 $lighter-grey-color: #d6d6d6;
+$lighter-grey-one-color: #dbdbdb;
 
 $darker-blue-color: #678fa8;
 
@@ -15,6 +16,7 @@ $very-light-grey-color: #e5e5e5;
 $very-lighter-grey-color: #f2f2f2;
 
 $black-color:#000000;
+$black-special-color:#333333;
 $white-color:#ffffff;
 $grey-color:#eeeeee;
 
