4. Адаптивные сетки 4.10. Адаптивная сетка для страницы каталога

--- a/source/sass/blocks/materials.scss
+++ b/source/sass/blocks/materials.scss
@@ -284,3 +284,243 @@
 .materials__navigation-group {
   padding-left: 103px;
 }
+
+@media (min-width: $tablet-width) {
+  .materials__triangle {
+    background-image: url("../img/triangle-top-tablet-desktop.svg");
+    max-width: 1199px;
+  }
+
+  .materials__lines-scenery-right,
+  .materials__lines-scenery-left {
+    width: 60px;
+    min-height: 400px;
+  }
+
+  .materials__scenery {
+    background-image: url("../img/scenery-tablet-desktop-catalog.jpg");
+
+    max-width: 1204px;
+    height: 400px;
+  }
+
+  .materials__vegetation {
+    background-image: url("../img/vegetation-tablet-catalog.jpg");
+
+    max-width: 398px;
+    min-width: 309px;
+    height: 267px;
+  }
+
+  .materials__road {
+    background-image: url("../img/road-tablet-catalog.jpg");
+
+    max-width: 399px;
+    min-width: 399px;
+    height: 267px;
+  }
+
+  .materials__bridge {
+    background-image: url("../img/bridge-tablet-catalog.jpg");
+
+    max-width: 398px;
+    height: 267px;
+  }
+
+  .materials__block,
+  .materials__cart {
+    border-bottom: none;
+  }
+
+  .materials__group {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: start;
+
+    padding-right: 60px;
+    padding-left: 60px;
+  }
+
+  .materials__lines-group {
+    display: none;
+  }
+
+  .materials__lines-road-right {
+    width: 60px;
+
+    margin-right: -60px;
+  }
+
+  .materials__cart-group {
+    width: calc(100% / 2);
+  }
+
+  .materials__cart-special {
+    margin-right: 60px;
+    margin-left: 60px;
+  }
+
+  .materials__cart-wrapper-one {
+    background-color: $lite-grey-one-color;
+  }
+
+  .materials__cart-wrapper-two {
+    background-color: $darker-grey-color;
+  }
+
+  .materials__cart-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .materials__social {
+    width: 90px;
+  }
+
+  .materials__player {
+    width: 648px;
+
+    margin-top: -100px;
+
+    display: block;
+    background-image: url("../img/background-scale-tablet.svg");
+
+    max-width: 648px;
+    min-width: 648px;
+    min-height: 93px;
+  }
+
+  .materials__range {
+    background-image: none;
+
+    position: absolute;
+    top: 22px;
+    left: 75px;
+
+    width: 100%;
+    min-width: 389px;
+
+    z-index: 1;
+  }
+
+  .materials__navigation {
+    position: absolute;
+    top: 13px;
+
+    width: 100%;
+    min-width: 648px;
+
+    margin-left: 20px;
+
+    background-color: transparent;
+  }
+
+  .materials__button-navigation {
+    position: relative;
+    right: 102px;
+  }
+
+  .materials__navigation-group {
+    padding-left: 0;
+
+    position: relative;
+    left: 192px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .materials__block {
+    background-color: $white-color;
+  }
+
+  .materials__vegetation {
+    background-image: url("../img/vegetation-desktop-catalog.jpg");
+
+    max-width: 400px;
+    height: 267px;
+  }
+
+  .materials__group {
+    flex-wrap: nowrap;
+
+    padding-right: 0;
+    padding-left: 0;
+  }
+
+  .materials__cart-group {
+    max-width: calc(100% / 3);
+  }
+
+  .materials__lines {
+    display: none;
+  }
+
+  .materials__lines-road-right {
+    display: none;
+  }
+
+  .materials__cart-wrapper {
+    background-image: url("../img/baclground-cart-catalog-desktop-opacity.svg");
+
+    margin-top: -90px;
+  }
+
+  .materials__cart-wrapper-one,
+  .materials__cart-wrapper-two {
+    background-color: transparent;
+  }
+
+  .materials__cart-special {
+    margin-right: 0;
+    margin-left: 0;
+  }
+
+  .materials__name,
+  .materials__author,
+  .materials__number {
+    color: $white-color;
+  }
+
+  .materials__road {
+    background-image: url("../img/road-desktop-catalog.jpg");
+
+    max-width: 400px;
+    height: 267px;
+  }
+
+  .materials__bridge {
+    background-image: url("../img/bridge-desktop-catalog.jpg");
+
+    width: 400px;
+    min-width: 400px;
+    height: 267px;
+  }
+
+  .materials__player {
+    width: 800px;
+    max-width: 800px;
+    min-width: 800px;
+    min-height: 93px;
+  }
+
+  .materials__navigation {
+    min-width: 800px;
+  }
+
+  .materials__button-navigation {
+    right: 167px;
+  }
+
+  .materials__navigation-group {
+    left: 284px;
+  }
+
+  .materials__range {
+    min-width: 540px;
+  }
+
+  .materials__-button-slider {
+    left: 128px;
+  }
+}
