--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -11,6 +11,7 @@ $lighter-grey-color: #d6d6d6;
 $lighter-grey-one-color: #dbdbdb;
 
 $darker-blue-color: #678fa8;
+$darker-grey-color: #eaeaea;
 
 $very-light-grey-color: #e5e5e5;
 $very-lighter-grey-color: #f2f2f2;
