--- a/source/sass/blocks/city.scss
+++ b/source/sass/blocks/city.scss
@@ -25,3 +25,15 @@
   display: flex;
   justify-content: center;
 }
+
+@media (min-width: $tablet-width) {
+  .city {
+    background-image: url("../img/background-tablet-desktop-catalog.jpg");
+
+    margin-top: 0;
+
+    width: 100%;
+    max-width: 100%;
+    height: 518px;
+  }
+}
